--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,8 +40,92 @@ a {
   text-decoration: underline;
 }
 
+main {
+  width: 1200px;
+  margin: auto;
+}
+
+h2, h3, h4 {
+  margin: 0;
+  padding: 10px;
+  font-weight: bold;
+}
+
 .flex-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+#mission {
+  height: 700px;
+  background-image: url("../images/img-mission-background.jpg");
+  padding-top: 70px;
+}
+
+#mission .content {
+  background-color: black;
+  margin: auto;
+  width: 100%;
+}
+
+#store {
+  width: 1000px;
+  height: 700px;
+  margin: auto;
+  padding-top: 70px;
+
+}
+
+.item {
+  padding: 5px;
+}
+
+.item img {
+    height: 200px;
+    width: 300px;
+    margin: 10px;
+    display: block;
+}
+
+.item span {
+    display: block;
+    padding: 5px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#locations {
+  background-image: url("../images/img-locations-background.jpg");
+  height: 500px;
+  padding-top: 70px;
+}
+
+#locations.flex-container {
+  width: 1100px;
+  margin: auto;
+}
+
+.flex-container.locations {
+  padding-top: 5px;
+}
+
+.location {
+    opacity: 1.0;
+    padding: 10px;
+    margin: 5px 20px;
+    background-color: black;
+    flex-basis: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#contact {
+  height: 200px;
+}
+
+footer {
+  text-align: left;
+  padding: 20px;
 }
